[package]
name = "clydeai-reborn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.197"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.44.0"
shuttle-serenity = "0.44.0"
tokio = "1.26.0"
tracing = "0.1.37"
async-openai = "0.20.0"
shuttle-secrets = "0.42.0"
